mealModelを追加しようとしたけどxibの部分がまだ上手くいってない

--- a/SimplePFC/Controller/AddMeal/AddMeal.storyboard
+++ b/SimplePFC/Controller/AddMeal/AddMeal.storyboard
@@ -19,22 +19,38 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="7hd-H4-yEE">
                                 <rect key="frame" x="20" y="159" width="353" height="524.66666666666663"/>
                                 <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="rJz-64-zm4">
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="101"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="食事名：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IlS-aP-6oi">
+                                                <rect key="frame" x="0.0" y="40.333333333333343" width="69.333333333333329" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q1I-L2-Agl">
+                                                <rect key="frame" x="74.333333333333343" y="33.333333333333343" width="278.66666666666663" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="9NY-so-hke">
-                                        <rect key="frame" x="0.0" y="0.0" width="353" height="127.33333333333333"/>
+                                        <rect key="frame" x="0.0" y="106" width="353" height="101"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カロリー：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="waA-7d-ma3">
-                                                <rect key="frame" x="0.0" y="53.666666666666657" width="86.666666666666671" height="20.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="40.333333333333314" width="86.666666666666671" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ciH-WO-knR">
-                                                <rect key="frame" x="91.666666666666686" y="46.666666666666657" width="226" height="34"/>
+                                                <rect key="frame" x="91.666666666666686" y="33.333333333333314" width="226" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="kcal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KtX-Eo-li6">
-                                                <rect key="frame" x="322.66666666666669" y="53.666666666666657" width="30.333333333333314" height="20.333333333333329"/>
+                                                <rect key="frame" x="322.66666666666669" y="40.333333333333314" width="30.333333333333314" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -42,21 +58,21 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dnP-JY-hKa">
-                                        <rect key="frame" x="0.0" y="132.33333333333331" width="353" height="127.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="211.99999999999997" width="353" height="100.66666666666666"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タンパク質：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQa-gk-CTT">
-                                                <rect key="frame" x="0.0" y="53.666666666666686" width="104" height="20.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="40.333333333333314" width="104" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Ra-Nn-soO">
-                                                <rect key="frame" x="109" y="46.666666666666686" width="229" height="34"/>
+                                                <rect key="frame" x="109" y="33.333333333333314" width="229" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="g" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y87-6V-WLo">
-                                                <rect key="frame" x="343" y="53.666666666666686" width="10" height="20.333333333333329"/>
+                                                <rect key="frame" x="343" y="40.333333333333314" width="10" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -64,21 +80,21 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="FIj-QU-Qi8">
-                                        <rect key="frame" x="0.0" y="265" width="353" height="127.33333333333331"/>
+                                        <rect key="frame" x="0.0" y="317.66666666666669" width="353" height="101"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="脂質：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5lf-1J-sei">
-                                                <rect key="frame" x="0.0" y="53.333333333333314" width="52" height="20.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="40.333333333333314" width="52" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cUq-pg-ble">
-                                                <rect key="frame" x="57" y="46.666666666666686" width="281" height="34"/>
+                                                <rect key="frame" x="57" y="33.666666666666629" width="281" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="g" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="73O-nC-JzU">
-                                                <rect key="frame" x="343" y="53.333333333333314" width="10" height="20.333333333333329"/>
+                                                <rect key="frame" x="343" y="40.333333333333314" width="10" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -86,21 +102,21 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="vib-Ea-1XH">
-                                        <rect key="frame" x="0.0" y="397.33333333333337" width="353" height="127.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="423.66666666666663" width="353" height="101"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="炭水化物：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b6K-Rn-Htz">
-                                                <rect key="frame" x="0.0" y="53.333333333333258" width="86.666666666666671" height="20.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="40.333333333333371" width="86.666666666666671" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E9y-ar-xmS">
-                                                <rect key="frame" x="91.666666666666671" y="46.666666666666629" width="246.33333333333331" height="34"/>
+                                                <rect key="frame" x="91.666666666666671" y="33.666666666666742" width="246.33333333333331" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="g" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K8N-2q-r0R">
-                                                <rect key="frame" x="343" y="53.333333333333258" width="10" height="20.333333333333329"/>
+                                                <rect key="frame" x="343" y="40.333333333333371" width="10" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -133,6 +149,7 @@
                         <outlet property="calorieTextField" destination="ciH-WO-knR" id="blS-bB-dwl"/>
                         <outlet property="carbohydrateTextField" destination="E9y-ar-xmS" id="5Ag-aN-KUQ"/>
                         <outlet property="fatTextField" destination="cUq-pg-ble" id="bmC-Ub-aV9"/>
+                        <outlet property="mealNameTextField" destination="Q1I-L2-Agl" id="MSv-OY-gty"/>
                         <outlet property="proteinTextField" destination="7Ra-Nn-soO" id="BtA-dC-3Zt"/>
                     </connections>
                 </viewController>
