モデルに時間を追加し、Meals画面でカレンダーに対応した日付の食事内容を表示

--- a/SimplePFC/Calendar/Calendar.storyboard
+++ b/SimplePFC/Calendar/Calendar.storyboard
@@ -22,7 +22,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="IAe-ig-dmE" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" multiplier="0.8" id="H7S-Tp-kn9"/>
                             <constraint firstItem="IAe-ig-dmE" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.5" id="Lcb-R6-jD1"/>
