--- a/SimplePFC/Meals/View/MealCell/MealTableViewCell.xib
+++ b/SimplePFC/Meals/View/MealCell/MealTableViewCell.xib
@@ -4,36 +4,88 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="137" id="KGk-i7-Jjw" customClass="MealTableViewCell" customModule="SimplePFC" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="318" height="137"/>
+            <rect key="frame" x="0.0" y="0.0" width="432" height="137"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="318" height="137"/>
+                <rect key="frame" x="0.0" y="0.0" width="432" height="137"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sFm-s1-yC3">
-                        <rect key="frame" x="0.0" y="0.0" width="318" height="137"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="QfY-kr-Ju8">
+                        <rect key="frame" x="21.666666666666657" y="0.0" width="388.66666666666674" height="137"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQM-rg-naT">
+                                <rect key="frame" x="0.0" y="0.0" width="129.66666666666666" height="137"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CN1-X6-DzF">
+                                <rect key="frame" x="149.66666666666669" y="0.0" width="53.666666666666657" height="137"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="nzU-Im-sFT">
+                                <rect key="frame" x="223.33333333333331" y="0.0" width="165.33333333333331" height="137"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgE-8h-Zux">
+                                        <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="137"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text=":" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9J-gD-gnr">
+                                        <rect key="frame" x="49.333333333333314" y="0.0" width="4.6666666666666643" height="137"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ChC-uP-BxL">
+                                        <rect key="frame" x="62" y="0.0" width="41.333333333333343" height="137"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text=":" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wpP-Mv-GSn">
+                                        <rect key="frame" x="111.33333333333331" y="0.0" width="4.6666666666666714" height="137"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F86-Zs-ebv">
+                                        <rect key="frame" x="123.99999999999999" y="0.0" width="41.333333333333329" height="137"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="sFm-s1-yC3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="A9Z-Ow-VX5"/>
-                    <constraint firstAttribute="trailing" secondItem="sFm-s1-yC3" secondAttribute="trailing" id="DNo-St-Qxy"/>
-                    <constraint firstAttribute="bottom" secondItem="sFm-s1-yC3" secondAttribute="bottom" id="aTS-RU-sq1"/>
-                    <constraint firstItem="sFm-s1-yC3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="gZY-I3-0jG"/>
+                    <constraint firstItem="QfY-kr-Ju8" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Hag-II-3du"/>
+                    <constraint firstItem="sQM-rg-naT" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.3" id="VjM-Fd-iE6"/>
+                    <constraint firstItem="QfY-kr-Ju8" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.9" id="blO-nV-6NM"/>
+                    <constraint firstItem="QfY-kr-Ju8" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" id="tSS-Jt-Lhb"/>
+                    <constraint firstItem="QfY-kr-Ju8" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uXu-ir-1Sc"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="MealLabel" destination="sFm-s1-yC3" id="7cH-RD-Tmi"/>
+                <outlet property="calorieLabel" destination="CN1-X6-DzF" id="oQW-2w-Rga"/>
+                <outlet property="carbohydrateLabel" destination="F86-Zs-ebv" id="MY7-qJ-OsG"/>
+                <outlet property="fatLabel" destination="ChC-uP-BxL" id="YQ3-bk-cIm"/>
+                <outlet property="nameLabel" destination="sQM-rg-naT" id="Saa-Yb-3ca"/>
+                <outlet property="proteinLabel" destination="XgE-8h-Zux" id="jgp-RR-oqd"/>
             </connections>
             <point key="canvasLocation" x="129.7709923664122" y="-44.014084507042256"/>
         </tableViewCell>
